--- a/sw/uiconfig/swriter/ui/numberinput.ui
+++ b/sw/uiconfig/swriter/ui/numberinput.ui
@@ -76,8 +76,8 @@
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="label" translatable="yes" context="stringinput|name">label1</property>
                 <property name="use-underline">True</property>
+                <property name="mnemonic_widget">spinbutton</property>
                 <property name="xalign">0</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
@@ -112,9 +112,8 @@
         </child>
         <child>
           <object class="GtkLabel" id="label2">
-            <property name="visible">True</property>
+            <property name="visible">False</property>
             <property name="can-focus">False</property>
-            <property name="label" translatable="yes" context="stringinput|name">label2</property>
           </object>
           <packing>
             <property name="expand">False</property>
