Resolves: tdf#152043 line wrap the label
Change-Id: I5e267a6e00b2f20aa3a74aa5288c8e183fd74e12
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142735
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/dbaccess/uiconfig/ui/connectionpage.ui
+++ b/dbaccess/uiconfig/ui/connectionpage.ui
@@ -33,10 +33,13 @@
               <object class="GtkLabel" id="browseurllabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="halign">start</property>
                 <property name="label" translatable="yes" context="connectionpage|browseurllabel">Path to the dBASE files:</property>
                 <property name="use-underline">True</property>
+                <property name="wrap">True</property>
                 <property name="mnemonic-widget">browseurl</property>
+                <property name="width-chars">38</property>
+                <property name="max-width-chars">38</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
