--- a/sd/uiconfig/simpress/ui/optimpressgeneralpage.ui
+++ b/sd/uiconfig/simpress/ui/optimpressgeneralpage.ui
@@ -146,7 +146,7 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="enprsntconsfullscreen">
-                <property name="label" translatable="yes" context="optimpressgeneralpage|enprsntconsfullscreen">Presenter Console Fullscreen</property>
+                <property name="label" translatable="yes" context="optimpressgeneralpage|enprsntconsfullscreen">Fullscreen presenter console</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">False</property>
@@ -154,7 +154,7 @@
                 <property name="draw-indicator">True</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="enprsntconsfullscreen-atkobject">
-                    <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|enprsntconsfullscreen">Specifies that you want to show the Presenter Console as fullscreen window.</property>
+                    <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|enprsntconsfullscreen">Specifies that you want to show the Presenter Console in fullscreen mode.</property>
                   </object>
                 </child>
               </object>
