--- a/sw/uiconfig/swriter/ui/autotext.ui
+++ b/sw/uiconfig/swriter/ui/autotext.ui
@@ -484,7 +484,9 @@
                         <property name="model">liststore1</property>
                         <property name="headers-visible">False</property>
                         <property name="headers-clickable">False</property>
+                        <property name="reorderable">True</property>
                         <property name="search-column">0</property>
+                        <property name="enable-tree-lines">True</property>
                         <child internal-child="selection">
                           <object class="GtkTreeSelection" id="treeview-selection1"/>
                         </child>
