DeepL: Only enable Translate menu if it's set up
Both the API URL and Authentication key have to be set.

Plus:
- align widgets in DeepL settings dialog,
- rename .ui file to conform to other dialog names in Options.

Change-Id: I8cfeaa64b05747b0113a6075b6fd241ca9ab3a70
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143359
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/cui/uiconfig/ui/optdeeplpage.ui
+++ b/cui/uiconfig/ui/optdeeplpage.ui
@@ -18,7 +18,7 @@
             <property name="halign">start</property>
             <property name="xpad">5</property>
             <property name="ypad">5</property>
-            <property name="label" translatable="yes" context="deepltabpage|label1">DeepL API Options</property>
+            <property name="label" translatable="yes" context="optdeeplpage|label1">DeepL API Options</property>
             <property name="use_underline">True</property>
             <property name="mnemonic_widget">grid1</property>
             <attributes>
@@ -32,7 +32,7 @@
         </child>
         <child>
           <object class="GtkLinkButton" id="privacy">
-            <property name="label" translatable="yes" context="deepltabpage|privacy">Please read the privacy policy</property>
+            <property name="label" translatable="yes" context="optdeeplpage|privacy">Please read the privacy policy</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
@@ -60,8 +60,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
-                <property name="margin_start">5</property>
-                <property name="label" translatable="yes" context="deepltabpage|privacy">API URL:</property>
+                <property name="label" translatable="yes" context="optdeeplpage|privacy">API URL:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">apiurl</property>
               </object>
@@ -76,7 +75,7 @@
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
                 <property name="margin_end">5</property>
-                <property name="label" translatable="yes" context="deepltabpage|label3">Authentication key:</property>
+                <property name="label" translatable="yes" context="optdeeplpage|label3">Authentication key:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">authkey</property>
               </object>
