--- a/svx/uiconfig/ui/sidebarshadow.ui
+++ b/svx/uiconfig/ui/sidebarshadow.ui
@@ -89,10 +89,10 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="color">
+          <object class="GtkLabel" id="shadowcolorlabel">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="label" translatable="yes" context="sidebarshadow|color">Color:</property>
+            <property name="label" translatable="yes" context="sidebarshadow|shadowcolorlabel">Color:</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">LB_SHADOW_COLOR</property>
             <property name="xalign">0</property>
